updated sam2 configs.

--- a/sam2/configs/sam2.1/sam2.1_hiera_l.yaml
+++ b/sam2/configs/sam2.1/sam2.1_hiera_l.yaml
@@ -90,7 +90,7 @@ model:
   # apply scaled sigmoid on mask logits for memory encoder, and directly feed input mask as output mask
   sigmoid_scale_for_mem_enc: 20.0
   sigmoid_bias_for_mem_enc: -10.0
-  use_mask_input_as_output_without_sam: true
+  use_mask_input_as_output_without_sam: false
   # Memory
   directly_add_no_mem_embed: true
   no_obj_embed_spatial: true
